syntax = "proto3";
package hello;
option go_package = "github.com/sanjaymijar/my-durable-execution/pb/hello";

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
